# mango-disease-prediction

./: .gitignore  CLAUDE.md  OUTSOURCE.md  README.md  ROADMAP.md  RUN.md  main.py  pyproject.toml
backend/: main.py
docs/: dataset_card.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_disease_training.ipynb  03_xai.ipynb  04_shap.ipynb  04_yield_training.ipynb  05_economics.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
src/: augment.py  dataset.py  economics.py
src/data/: 01_eda.py  02_preprocessing.py  03_disease_training.py  03_xai.py  04_shap.py  04_yield_training.py  05_economics.py  06_dataset_eda.py  download_backgrounds.py  merge_data.py  merge_image_datasets.py  mock_nhb_yield.py  pull_nasa_power.py  smoke_test.py
src/models/: disease_cnn.py  train.py  xai.py  yield_model.py
