[project]
name = "mango-disease-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "albumentations>=2.0.8",
    "beautifulsoup4>=4.14.3",
    "earthengine-api>=1.7.26",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.2",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcam>=0.3.1",
    "torchvision>=0.27.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
